# sky_django_market

./: README.md  pyproject.toml
market_postgres/: docker-compose.yaml
skymarket/ads/: models.py  serializers.py  views.py
skymarket/ads/migrations/: 0001_initial.py
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: admin.py  managers.py  models.py  urls.py
skymarket/users/management/commands/: loadall.py
skymarket/users/migrations/: 0001_initial.py
