[tool.poetry]
name = "sky-django-market"
version = "0.1.0"
description = ""
authors = ["Manuilov Daniil <manuilovdaniil@yandex.ru>"]
readme = "README.md"
packages = [{include = "sky_django_market"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^3"
django-cors-headers = "^3"
python-dotenv = "^1.0.0"
drf-yasg = "^1.21.5"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.1.0"}
djoser = "^2.2.0"
psycopg2 = "^2.9.6"
pillow = "^9.5.0"
djangorestframework-simplejwt = "^5.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
